--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.27",
         "bootstrap": "^5.1.3",
+        "jquery": "^3.6",
+        "jquery-ui": "^1.13.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
