--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "popper.js": "^1.16.1",
+        "sweetalert2": "^11.4.33"
     }
 }
