--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.1",
         "jquery": "^3.6",
         "jquery-ui": "^1.13.2",
         "laravel-mix": "^6.0.49",
@@ -15,7 +16,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
-        "vite": "^3.0.0"
+        "vite": "^3.0.0",
+        "vue": "^3.2.37"
     },
     "dependencies": {
         "popper.js": "^1.16.1",
