--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
         "popper.js": "^1.16.1",
         "sweetalert2": "^11.4.33"
     }
