integration with przelewy24.pl

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,14 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SHOP_DEFAULT_IMAGE=https://via.placeholder.com/240x240/5fa9f8/efefef
+
+#SESSION_DOMAIN=localhost
+
+PRZELEWY24_MERCHANT_ID=
+PRZELEWY24_POS_ID=
+PRZELEWY24_CRC=
+PRZELEWY24_REPORT_KEY=
+PRZELEWY24_URL_RETURN=http://127.0.0.1:8000/orders
+PRZELEWY24_URL_STATUS=http://127.0.0.1:8000/payment/status
+PRZELEWY24_TEST_SERVER=true
+PRZELEWY24_WAIT_FOR_RESULT=true
